--- a/cheats/cs2-rust/Cargo.toml
+++ b/cheats/cs2-rust/Cargo.toml
@@ -12,7 +12,7 @@ windows = { version = "0.59", features = [
     "Win32_System_Threading",
     "Win32_System_ProcessStatus",
     "Win32_System_Diagnostics_ToolHelp",
-    "Win32_System_Memory",
+    "Win32_System_Diagnostics_Debug",
     "Win32_System_LibraryLoader",
     "Win32_System_Console",
     "Win32_UI_WindowsAndMessaging",
