--- a/cheats/cs2-rust/Cargo.toml
+++ b/cheats/cs2-rust/Cargo.toml
@@ -15,6 +15,8 @@ windows = { version = "0.59", features = [
     "Win32_System_Diagnostics_Debug",
     "Win32_System_LibraryLoader",
     "Win32_System_Console",
+    "Win32_System_IO",
+    "Win32_Storage_FileSystem",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_UI_Controls",
