--- a/cheats/cs2-rust/Cargo.toml
+++ b/cheats/cs2-rust/Cargo.toml
@@ -9,6 +9,7 @@ description = "External ESP for CS2 - Rust Edition (Based on Valthrun architectu
 # Windows API
 windows = { version = "0.59", features = [
     "Win32_Foundation",
+    "Win32_Security",
     "Win32_System_Threading",
     "Win32_System_ProcessStatus",
     "Win32_System_Diagnostics_ToolHelp",
