refactor(driver): Remove WDK dependency - Pure FFI implementation

--- a/cheats/cs2-rust/driver/Cargo.toml
+++ b/cheats/cs2-rust/driver/Cargo.toml
@@ -3,26 +3,20 @@ name = "externa-driver"
 version = "1.0.0"
 edition = "2021"
 authors = ["Externa Team"]
-description = "Kernel Driver for Externa CS2 (Based on Valthrun Zenith)"
+description = "Kernel Driver for Externa CS2 (No WDK dependency)"
 
 [lib]
 crate-type = ["cdylib"]
 path = "src/lib.rs"
 
+# NO DEPENDENCIES - Pure FFI
 [dependencies]
-# Windows Driver Kit bindings
-wdk = "0.3"
-wdk-sys = "0.3"
-
-[build-dependencies]
-wdk-build = "0.3"
 
 [profile.release]
-opt-level = 3
+opt-level = "z"
 lto = true
 codegen-units = 1
 panic = "abort"
 
 [profile.dev]
 panic = "abort"
-
