--- a/cheats/cs2-rust/Cargo.toml
+++ b/cheats/cs2-rust/Cargo.toml
@@ -23,6 +23,13 @@ windows = { version = "0.59", features = [
     "Win32_UI_Controls",
     "Win32_Graphics_Gdi",
     "Win32_Graphics_Dwm",
+    "Win32_Graphics_Direct3D",
+    "Win32_Graphics_Direct3D11",
+    "Win32_Graphics_Dxgi",
+    "Win32_Graphics_Dxgi_Common",
+    "Win32_Graphics_Direct2D",
+    "Win32_Graphics_Direct2D_Common",
+    "Win32_Graphics_DirectWrite",
 ]}
 
 # Math
