--- a/cheats/externa-rust-v2/Cargo.toml
+++ b/cheats/externa-rust-v2/Cargo.toml
@@ -14,9 +14,9 @@ env_logger = "0.11"
 # Lazy static initialization
 once_cell = "1.20"
 
-# ImGui
-imgui = "0.12"
-imgui-dx11-renderer = "0.9"
+# ImGui - Removed (Using Direct2D)
+# imgui = "0.12"
+# imgui-dx11-renderer = "0.9"
 
 # Windows API
 [dependencies.windows]
