--- a/cheats/externa-rust-v2/Cargo.toml
+++ b/cheats/externa-rust-v2/Cargo.toml
@@ -11,12 +11,11 @@ anyhow = "1.0"
 # Logging
 log = "0.4"
 env_logger = "0.11"
-# Lazy static initialization
-once_cell = "1.20"
 
-# ImGui - Removed (Using Direct2D)
-# imgui = "0.12"
-# imgui-dx11-renderer = "0.9"
+# ImGui (stable versions from ProExt)
+imgui = "0.11"
+imgui-dx11-renderer = "0.8"
+imgui-winapi-support = "0.11"
 
 # Windows API
 [dependencies.windows]
@@ -28,18 +27,18 @@ features = [
     "Win32_System_LibraryLoader",
     "Win32_System_Diagnostics_Debug",
     "Win32_System_Diagnostics_ToolHelp",
-    "Win32_System_Memory",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Input_KeyboardAndMouse",
-    "Win32_UI_Controls",
     "Win32_Graphics_Gdi",
     "Win32_Graphics_Dwm",
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Direct3D11",
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dxgi_Common",
-    "Win32_Graphics_Direct2D",
-    "Win32_Graphics_Direct2D_Common",
-    "Win32_Graphics_DirectWrite",
 ]
 
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
