--- a/cheats/externa-rust-v2/Cargo.toml
+++ b/cheats/externa-rust-v2/Cargo.toml
@@ -12,8 +12,8 @@ anyhow = "1.0"
 log = "0.4"
 env_logger = "0.11"
 
-# ImGui (stable versions from ProExt)
-imgui = "0.11"
+# ImGui (compatible versions)
+imgui = "0.8"
 imgui-dx11-renderer = "0.8"
 
 # Windows API
