--- a/cheats/externa-rust-v2/Cargo.toml
+++ b/cheats/externa-rust-v2/Cargo.toml
@@ -19,7 +19,7 @@ windows = { version = "0.59", features = [
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_Graphics_Gdi",
     "Win32_Graphics_Dwm",
-    "Win32_Graphics_Dxgi",
+    "Win32_Graphics_Dxgi_Common",
     "Win32_Graphics_Direct2D",
     "Win32_Graphics_Direct2D_Common",
     "Win32_Graphics_DirectWrite",
