--- a/cheats/externa-rust-v2/Cargo.toml
+++ b/cheats/externa-rust-v2/Cargo.toml
@@ -23,6 +23,7 @@ windows = { version = "0.59", features = [
     "Win32_Graphics_Direct2D",
     "Win32_Graphics_Direct2D_Common",
     "Win32_System_Com",
+    "Foundation_Numerics",
     "Win32_Graphics_DirectWrite",
 ] }
 
