--- a/.github/workflows/rust-release.yml
+++ b/.github/workflows/rust-release.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  CARGO_INCREMENTAL: 0
 
 jobs:
   build:
@@ -22,6 +23,21 @@ jobs:
       with:
         targets: x86_64-pc-windows-msvc
     
+    - name: Cache Cargo
+      uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: cheats/externa-rust-v2 -> target
+        cache-on-failure: true
+    
+    - name: Get Version
+      id: version
+      working-directory: cheats/externa-rust-v2
+      shell: pwsh
+      run: |
+        $version = (Select-String -Path Cargo.toml -Pattern 'version = "(.+)"' | ForEach-Object { $_.Matches.Groups[1].Value })
+        echo "VERSION=$version" >> $env:GITHUB_OUTPUT
+        echo "Building version: $version"
+    
     - name: Build Release
       working-directory: cheats/externa-rust-v2
       run: cargo build --release
@@ -29,6 +45,7 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Externa-CS2-v2
+        name: Externa-CS2-v${{ steps.version.outputs.VERSION }}
         path: cheats/externa-rust-v2/target/release/externa-rust-v2.exe
-
+        retention-days: 30
+        if-no-files-found: error
