--- a/cheats/externa-rust-v2/Cargo.toml
+++ b/cheats/externa-rust-v2/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "externa-rust-v2"
-version = "2.1.0"
+version = "2.3.0"
 edition = "2021"
 
 [dependencies]
@@ -36,6 +36,13 @@ anyhow = "1.0"
 log = "0.4"
 env_logger = "0.11"
 parking_lot = "0.12"
+rand = "0.8"
+chrono = "0.4"
+
+# For dynamic offsets
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+ureq = "2.9"
 
 [profile.dev]
 opt-level = 0
