feat: Single-EXE with embedded drivers + KDMapper Rust port
🚀 NEW FEATURES:
- Embedded driver support (build with --features embed_drivers)
- KDMapper ported to Rust (kdmapper.rs)
- Auto driver loading with fallback to syscall
- Unified CI/CD that builds everything

📁 NEW FILES:
- memory/embedded_driver.rs - Embedded driver manager
- memory/kdmapper.rs - Full kdmapper port (843 lines)
- memory/driver_loader.rs - Service-based loading
- assets/ - Folder for driver files

🔧 CI/CD (full-release.yml):
- Builds kernel driver (if WDK available)
- Downloads Intel driver (iqvw64e.sys)
- Builds FULL version with embedded drivers
- Builds standard version (syscall mode)
- Packages everything together

📦 OUTPUT:
- Externa-CS2-vX.X.X-FULL.exe (drivers inside!)
- Externa-CS2-vX.X.X.exe (syscall mode)
- driver/ folder with .sys files

🔄 PRIORITY:
1. Kernel Driver (embedded or external)
2. Direct Syscall (NtReadVirtualMemory)
3. WinAPI fallback (ReadProcessMemory)

Version: 2.4.0

--- a/cheats/externa-rust-v2/Cargo.toml
+++ b/cheats/externa-rust-v2/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "externa-rust-v2"
-version = "2.3.0"
+version = "2.4.0"
 edition = "2021"
+
+[features]
+default = []
+# Enable to embed drivers directly into exe
+# Requires: assets/laithdriver.sys and assets/iqvw64e.sys
+embed_drivers = []
 
 [dependencies]
 # Windows API
@@ -15,6 +21,10 @@ windows = { version = "0.59", features = [
     "Win32_System_LibraryLoader",
     "Win32_System_Memory",
     "Win32_System_Console",
+    "Win32_System_Services",
+    "Win32_System_SystemInformation",
+    "Win32_System_IO",
+    "Win32_Storage_FileSystem",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_Graphics_Gdi",
