feat: Add Intel driver (iqvw64e.sys) for DSE bypass
- Downloaded from kdmapper releases
- Size: 290KB
- Updated .gitignore to allow assets/*.sys
- Now BUILD.bat can embed drivers automatically!

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@ vcpkg/
 
 # Kernel drivers (sensitive - do not commit!)
 *.sys
+# But allow in assets folder for embedding
+!cheats/externa-rust-v2/assets/*.sys
 embedded_driver_data.hpp
 
 # Study repositories (cloned for reference, not part of project)
