feat: Add kernel driver source code + debug logging
DRIVER:
- Added laith-km-driver/ folder with full source
- Open Driver.sln in Visual Studio 2022
- Requires WDK to build

DEBUG:
- Added render loop logging (first 3 frames)
- Added 'Press Enter to exit' to keep console open
- Fixed wnd_proc to use PostQuitMessage

Build driver: VS2022 + WDK → Driver.sln → Build

--- a/.gitignore
+++ b/.gitignore
@@ -79,8 +79,8 @@ vcpkg/
 !cheats/externa-rust-v2/assets/*.sys
 embedded_driver_data.hpp
 
-# Study repositories (cloned for reference, not part of project)
+# Study repositories (cloned for reference)
 DragonBurn-study/
 laith-dragonburn/
-laith-km-driver/
+# laith-km-driver/ - NOW INCLUDED for driver build
 
