fix: Add TargetName, TargetExt and OutputFile for driver linking
- TargetName: laithdriver
- TargetExt: .sys
- OutputFile explicit path
- This should produce laithdriver.sys

--- a/laith-km-driver/km/km.vcxproj
+++ b/laith-km-driver/km/km.vcxproj
@@ -84,6 +84,8 @@
     <OutDir>$(SolutionDir)build\</OutDir>
     <IntDir>$(SolutionDir)build\vm_intermediates\</IntDir>
     <EnableInf2cat>false</EnableInf2cat>
+    <TargetName>laithdriver</TargetName>
+    <TargetExt>.sys</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
@@ -137,6 +139,8 @@
       <AdditionalDependencies>ntoskrnl.lib;hal.lib;wmilib.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Native</SubSystem>
       <Driver>Driver</Driver>
+      <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Inf>
       <SpecifyArchitecture>true</SpecifyArchitecture>
